# lexstab

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  llm-lexical-stability-harness-implementation-spec.md  metrics-output.json  pyproject.toml
config/: logging.example.yaml  models.example.yaml  models.mock.yaml  run.example.yaml  run.smoke.yaml  run.v0.2-provider-check.yaml  run.v0.2-rmi-check.yaml  run.v0.2.1-frozen-1x.yaml  run.v0.2.1-frozen-5x.yaml  run.v0.2.1-provider-check.yaml  run.v0.2.1-rmi-check.yaml  run.v0.3.0-model-comparison-health.yaml  run.v0.3.0-rmi-replication-1x.yaml  thresholds.example.yaml
docs/: ANALYSIS_PLAN.md  ARTICLE_OUTLINE_AND_EVIDENCE_TRACKER.md  CROSS_MODEL_PERSISTENCE_FINDINGS.md  DATASET_AUTHORING.md  DECISIONS.md  METHODOLOGY.md  MODEL_TIER_COMPARISON_PROTOCOL.md  NEW_PROJECT_HANDOFF.md  NEXT_RESEARCH_PROGRAM.md  PHASE_ONE_EVIDENCE_SUMMARY.md  PROCEDURES_AND_INTERFACES.md  RESULTS_GUIDE.md  RUNBOOK.md  STATUS_AND_ROADMAP.md
schemas/: action-interface.schema.json  action-proposal.schema.json  benchmark-manifest.schema.json  canonical-resolution.schema.json  case.schema.json  complexity-profile.schema.json  context.schema.json  domain.schema.json  elicitation-case.schema.json  invocation.schema.json  lexical-name.schema.json  operation.schema.json  procedure.schema.json  rendering.schema.json  representation-ledger.schema.json  request.schema.json  run-manifest.schema.json  score.schema.json  semantic-memory.schema.json
scripts/: acceptance_demo.py  build_starter_dataset.py
tests/: conftest.py
(+202 files in other folders)
