[project]
name = "lexstab"
version = "0.1.0"
description = "LLM lexical stability and canonical ontology testing harness"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",
    "jsonschema>=4.21",
    "typer>=0.12",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "matplotlib>=3.8",
    "duckdb>=1.0",
    "httpx>=0.27",
    "langgraph>=0.2",
]

[project.optional-dependencies]
langsmith = ["langsmith>=0.1"]

[project.scripts]
lexstab = "lexstab.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lexstab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.uv]
required-version = ">=0.5"
